--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,9 @@ p{
 #hero-section img{
     width: 15rem
 }
+.sections_padding{
+    padding: 4rem 0
+}
 /* end hero section */
 /* start section of about us */
 /* end section of about us */
@@ -153,6 +156,24 @@ p{
 }
 #navbar-button i{
 }
+/* start what we provide section */
+.what-provide__section{
+    background-image: url(../images/whatProvide.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+.what-provide__content{
+    position: relative;
+    z-index: 2
+}
+.what-provide__content ul{
+    color: #fff;
+    margin-left: 1.7rem;
+    font-size: 1.1rem;
+}
+/* end what we provide section */
 /* start our client section */
 #our-client{
     background-image: url(../images/client3.jpg);
@@ -163,10 +184,12 @@ p{
 .our-client_images{
     background: rgba(22, 22, 22, 0.53);
     width: fit-content;
-    margin: 8rem auto 0;
     position: relative;
 }
-
+.our-client__header{
+    position: relative;
+    z-index: 2
+}
 #our-client .overlay{
     background: rgba(81, 81, 81, 0.42)
 }
