--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h2{
     color: #fff;
     font-family: "headerFont",sans-serif;
     text-transform: uppercase;
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-bottom: 1.3rem
 }
 .line-above__header{
@@ -173,6 +173,20 @@ p{
 }
 /* end what we provide section */
 /* start services section */
+#services_section,
+#our-team{
+    background: rgba(181, 180, 180, 0.27)
+}
+.card{
+    transition: all ease-in-out .3s;
+    -webkit-transition: all ease-in-out .3s;
+    -moz-transition: all ease-in-out .3s;
+    -ms-transition: all ease-in-out .3s;
+    -o-transition: all ease-in-out .3s;
+}
+.card:hover{
+    box-shadow: 0px 0px 15px 0px rgb(82, 82, 82)
+}
 #owl-demo h5{
     font-weight: bold
 }
@@ -180,7 +194,28 @@ p{
     color: #000
 }
 /* end services section */
+
+/* /* start section of mangar massege  * / */
+.mangar-info{
+    position: relative;
+}
+.mangar-name{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(22, 22, 22, 0.43);
+}
+.mangar-name h5{
+    text-transform: capitalize;
+    margin-bottom: 0;
+    margin-top: .5rem;
+    color: #fff;
+    font-weight: bold;
+
+}
+/* end section of mangar massege  * /
 /* start our client section */
+
 #our-client{
     background-image: url(../images/client3.jpg);
     background-repeat: no-repeat;
@@ -265,5 +300,5 @@ footer .social-media a{
     -o-transition: all ease-in-out .3s;
 }
 footer .social-media a:hover{
-    background: rgba(248, 207, 44, 1)
+    background: rgb(248, 197, 0)
 }
