--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,9 @@ p{
 /* end what we provide section */
 /* start services section */
 #services_section,
-#our-team{
-    background: rgba(181, 180, 180, 0.27)
+#our-team,
+#portofolio{
+    background: rgba(211, 211, 211, 0.27)
 }
 .card{
     transition: all ease-in-out .3s;
