adding scroll top arrow and update navbar

--- a/css/style.css
+++ b/css/style.css
@@ -371,3 +371,17 @@ footer .social-media a{
 footer .social-media a:hover{
     background: rgb(248, 197, 0)
 }
+#arrow{
+    font-size: 1.5rem;
+    color: #fff;
+    background: rgb(248, 197, 0);
+    display: block;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    display: none
+}
