--- a/css/maneger.css
+++ b/css/maneger.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-position: bottom center;
+    /* background-position: bottom center; */
     height: 0;
     padding: 15rem 0;
 
