--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ p{
 #header-navbar a{
     color: #fff;
     font-size: 1.3rem;
+    text-transform: capitalize;
     transition: all ease-in-out .3s;
     -webkit-transition: all ease-in-out .3s;
     -moz-transition: all ease-in-out .3s;
@@ -259,7 +260,7 @@ p{
 .mangar-info:hover .mangar-name{
     bottom: 0;
 }
-.mangar-name h5{
+.mangar-name h5 a{
     text-transform: capitalize;
     margin-bottom: 0;
     margin-top: .5rem;
@@ -272,7 +273,7 @@ p{
     -ms-transition: all ease-in-out .3s;
     -o-transition: all ease-in-out .3s;
 }
-.mangar-name h5:hover,
+.mangar-name h5 a:hover,
 .mangar-name a:hover svg{
     color: rgb(248, 197, 0)
 }
@@ -383,5 +384,10 @@ footer .social-media a:hover{
     position: fixed;
     right: 1rem;
     bottom: 1rem;
-    display: none
+    display: none;
+    transition: all ease-in-out .3s;
+
+}
+#arrow:hover{
+    background: rgb(194, 155, 6)
 }
