--- a/css/maneger.css
+++ b/css/maneger.css
@@ -1,19 +1,22 @@
 /* managers */
-#hero-section{
-    background-image: url(../images/slider2.jpg);
+#manager-hero__section{
+    background-image: url(../images/mangars/1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    /* background-position: bottom center; */
-    height: 0;
-    padding: 15rem 0;
-
+    position: relative;
+}
+.hero-section__content{
+    padding: 12rem 0 8rem
+}
+h1{
+    font-size: 2.5rem
 }
 .massage-details h3{
     font-weight: bold
 }
 .massage-details p{
-    color: #000
+    color: rgb(101, 101, 101)
 }
 .massage-details h5{
     font-size: 1.2rem;
