--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@
 }
 body{
     font-size: 10px;
-    font-family: "mainFont"
+    font-family: "mainFont";
+    background: rgba(211, 211, 211, 0.27)
 }
 a , a:hover , a:active , a:visited{
     text-decoration: none
@@ -156,7 +157,27 @@ header{
     background-image: url(../images/mission.jpg);
 }
 /* end section of mission and vission */
-
+/* start service process section */
+.step__service-planning svg,
+.step__service-planning i{
+    font-size: 2rem
+}
+.service-planning__content{
+    background:rgba(0, 0, 0, 0.88);
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+}
+.service-planning__content p{
+    font-size: 1rem
+}
+.service-planning__content h4{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 1.3rem;
+}
+/* end service process section */
 /* start what we provide section */
 .what-provide__section{
     background-image: url(../images/whatProvide.jpg);
@@ -213,30 +234,6 @@ header{
     -o-transform: scale(1.1);
 }
 /* end portfolio section */
-/* start services section */
-#services_section,
-#our-team,
-#portofolio{
-    background: rgba(211, 211, 211, 0.27)
-}
-.card{
-    transition: all ease-in-out .3s;
-    -webkit-transition: all ease-in-out .3s;
-    -moz-transition: all ease-in-out .3s;
-    -ms-transition: all ease-in-out .3s;
-    -o-transition: all ease-in-out .3s;
-}
-.card:hover{
-    box-shadow: 0px 0px 15px 0px rgb(82, 82, 82)
-}
-#owl-demo h5{
-    font-weight: bold
-}
-#owl-demo p{
-    color: #000
-}
-/* end services section */
-
 /* /* start section of mangar massege  * / */
 .mangar-info{
     position: relative;
@@ -344,6 +341,12 @@ footer h3{
     font-family: "headerFont",sans-serif;
     text-transform: uppercase;
     border-bottom: 1px solid rgba(248, 207, 44, 1)
+}
+.company-location{
+    color: rgb(248, 197, 0);
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 footer .social-media a{
     color: #fff;
