--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,9 +1,9 @@
 #hero-aboutUs__section{
-    background-image: url(../images/aboutUs/about.jpg);
+    background-image: url(../images/aboutUs/bg.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: 50%;
+    /* background-position-y: 50%; */
     position: relative;
 }
 #hero-aboutUs__section .hero-section__content{
@@ -15,16 +15,28 @@
 }
 #hero-aboutUs__section .hero-section__content p{
     letter-spacing: .5rem;
+    color: #fff
 }
 /* end hero section */
- p{
-color: #000
+h2{
+    font-size: 2.5rem;
+    color: #000;
 }
-.about-us__content span{
-    font-weight: bold;
-    color: rgba(248, 207, 44, 1);
-    font-size: 1rem;
-    text-transform: uppercase
+section p{
+    color: rgb(101, 101, 101)
+}
+.about-us__image{
+    position: relative;
+}
+.about-us__image::after{
+    content: "";
+    position: absolute;
+    top: 15px ;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border: 4px solid rgb(249, 199, 2)
+
 }
 /* start section of mission and vission */
  .vision-content,
