--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
     margin-top: 1rem;
     display: block;
     text-align: center;
-    color: rgba(248, 207, 44, 1)
+    color: rgb(249, 199, 2)
 }
 body{
     font-size: 10px;
@@ -55,14 +55,17 @@ h2{
     font-size: 3.5rem;
     margin-bottom: 1.3rem
 }
+h2 span{
+    color: #000
+}
 .line-above__header{
     width: 6.5rem;
-    height: 0.8rem;
-    background: rgba(248, 207, 44, 1);
+    height: 0.4rem;
+    background: rgb(249, 199, 2);
     margin: 0rem auto 1.7rem;
 }
 .base-color{
-    color: rgba(248, 207, 44, 1)
+    color: rgb(249, 199, 2)
 }
 .overlay{
     position: absolute;
@@ -70,7 +73,7 @@ h2{
     width: 100%;
     left: 0;
     top:0;
-    background: rgba(28, 28, 28, 0.5)
+    background: rgba(28, 28, 28, 0.6)
 }
 p{
     color: #fff;
@@ -86,7 +89,7 @@ header{
     left: 0;
     right: 0;
     z-index: 999;
-    background-color: rgba(20, 20, 20, 0.7);
+    background-color: rgba(20, 20, 20, 0.8);
     transition: all ease-in-out .3s;
     -webkit-transition: all ease-in-out .3s;
     -moz-transition: all ease-in-out .3s;
@@ -120,7 +123,7 @@ header{
     color: #fff
 }
 .nav-item.active{
-    border-bottom: 2px solid rgba(248, 207, 44, 1);
+    border-bottom: 2px solid rgb(249, 199, 2);
 }
 /* start hero section */
 #hero-section{
@@ -217,7 +220,7 @@ header{
     left: 15px;
     right: 15px;
     bottom: 15px;
-    border: 2px solid rgba(248, 207, 44, 1)
+    border: 2px solid rgb(249, 199, 2)
 }
 #portofolio .portfolio-items .overlay{
     opacity: 0;
@@ -305,7 +308,7 @@ header{
     /* background: rgba(81, 81, 81, 0.42) */
 }
 #our-client .client-logo{
-    border: 1px solid rgba(248, 207, 44, 1);
+    border: 1px solid rgb(249, 199, 2);
     border-top: 0
 }
 #our-client .client-logo div{
@@ -327,7 +330,7 @@ footer .about-us__footer img{
 }
 .footer-links ul li i,
 .footer-links ul li svg{
-    color: rgba(248, 207, 44, 1)
+    color: rgb(249, 199, 2)
 }
 .footer-links ul li{
     color: #fff;
@@ -351,7 +354,7 @@ footer h3{
     color: #fff;
     font-family: "headerFont",sans-serif;
     text-transform: uppercase;
-    border-bottom: 1px solid rgba(248, 207, 44, 1)
+    border-bottom: 1px solid rgb(249, 199, 2)
 }
 .company-location{
     color: rgb(248, 197, 0);
