--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,3 @@
-body{
-    background: rgba(211, 211, 211, 0.27)
-}
 /* start hero section */
 #hero-service__section{
     background-image: url(../images/services/serv-2.jpg);
@@ -28,11 +25,6 @@ body{
 #services-details #nav-tab a{
     font-size: 1.1rem;
     color: #000;
-    transition: all ease-in-out .3s;
-    -webkit-transition: all ease-in-out .3s;
-    -moz-transition: all ease-in-out .3s;
-    -ms-transition: all ease-in-out .3s;
-    -o-transition: all ease-in-out .3s;
     margin-top: .5rem;
     padding: 1rem;
     border: 1px solid rgb(222, 222, 222);
@@ -45,6 +37,7 @@ body{
     text-transform: capitalize
 }
 .link-visted,
+.nav-tabs .nav-link.active,
 #services-details #nav-tab a:hover{
     background: rgb(249, 199, 2) !important; 
     color: #fff !important;
