--- a/css/management.css
+++ b/css/management.css
@@ -1,1 +1,16 @@
 /* start hero section */
+#cost-management__hero-section{
+    background-image: url(../images/management/1.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: relative;
+    padding: 12rem 0 8rem
+}
+#cost-management__hero-section p{
+    letter-spacing: .5rem;
+}
+.hero-section__content{
+    position: relative;
+}
+/* end hero section */
