--- a/css/management.css
+++ b/css/management.css
@@ -13,4 +13,40 @@
 .hero-section__content{
     position: relative;
 }
-/* end hero section */
+p{
+    color: rgb(101, 101, 101)    
+}
+.content-icon svg{
+    font-size: 2.5rem;
+    color: #fff
+}
+.content-icon{
+    width: 4rem;
+    height: 4rem;
+    background: rgba(20, 20, 20);
+    line-height: 5.5rem;
+    margin: 2rem auto;
+    position: relative;
+}
+.content-icon::after{
+    content: "";
+    border: 1px dashed rgba(20, 20, 20);
+    position: absolute;
+    top: -.7rem;
+    left: -.7rem;
+    right: -.7rem;
+    bottom: -.7rem
+}
+h3{
+    text-transform: capitalize
+}
+#cost-management__content .card{
+    background: none
+}
+.wrapper{
+    background: rgb(249, 199, 2);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px
+}
+    /* end hero section */
