update items of cost management

--- a/css/management.css
+++ b/css/management.css
@@ -18,17 +18,12 @@ p{
 }
 .content-icon svg{
     font-size: 2.5rem;
-    color: #fff
+    color: rgb(249, 199, 2)
 }
 .content-icon{
-    width: 4rem;
-    height: 4rem;
-    background: rgba(20, 20, 20);
-    line-height: 5.5rem;
-    margin: 2rem auto;
     position: relative;
 }
-.content-icon::after{
+/* .content-icon::after{
     content: "";
     border: 1px dashed rgba(20, 20, 20);
     position: absolute;
@@ -36,9 +31,12 @@ p{
     left: -.7rem;
     right: -.7rem;
     bottom: -.7rem
-}
+} */
 h3{
-    text-transform: capitalize
+    text-transform: capitalize;
+    font-weight: bold;
+    font-size: 1.5rem;
+    line-height: 2.2rem
 }
 #cost-management__content .card{
     background: none
