--- a/css/about-us.css
+++ b/css/about-us.css
@@ -29,10 +29,10 @@ section p{
 .about-us__image::after{
     content: "";
     position: absolute;
-    top: 15px ;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
+    top: 1rem ;
+    left: 1rem;
+    right: 1rem;
+    bottom: 1rem;
     border: 4px solid rgb(249, 199, 2)
 }
 /* start section of mission and vission */
