--- a/css/interiorFitOut.css
+++ b/css/interiorFitOut.css
@@ -82,4 +82,18 @@ h4{
     position: relative;
     
 }
+    /*start repairing-maintenance__section   */
+    #repairing-maintenance__section img{
+        box-shadow: 6px 6px 11px rgba(204, 204, 204, 0.62)
+    }
+    #repairing-maintenance__section ul li{
+        font-size: 1rem;
+        font-weight: bold;
+        margin-bottom: 2rem;
+        /* color: #000 */
+    }
+    #repairing-maintenance__section ul li i,
+    #repairing-maintenance__section ul li svg{
+        font-size: 1.8rem;
     
+    }
