--- a/css/design.css
+++ b/css/design.css
@@ -123,3 +123,11 @@ h3{
     font-size: .9rem;
     margin-bottom: .2rem;
  }
+ @media (max-width: 768px){
+    #why-blackstone li{
+        margin-bottom: 1.5rem
+    }
+    #why-blackstone li:not(:last-of-type)::after{
+        display: none
+    }
+ }
