--- a/css/management.css
+++ b/css/management.css
@@ -49,7 +49,8 @@ h3{
     text-transform: capitalize;
     font-weight: bold;
     font-size: 1.5rem;
-    line-height: 2.2rem
+    line-height: 2.2rem;
+    color: #000;
 }
 #cost-management__content .card{
     background: none
