--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 13rem 0 ;
+    padding: 12rem 0 8rem ;
     position: relative;
 }
 ul.portfolio-items li{
