--- a/css/style.css
+++ b/css/style.css
@@ -472,9 +472,6 @@ footer .social-media a:hover{
         position: relative ;
         background: none 
     }
-    #header-navbar {
-        height: 100vh;
-    }
     h1{
         font-size: 2rem;
         width: 100%
@@ -483,4 +480,10 @@ footer .social-media a:hover{
     .lightbox{
         /* display: none !important */
     }
+}
+@media (max-width: 991px){
+    .navbar-collapse#header-navbar {
+    height: 100vh ;
+    }
+
 }
